// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TooltipMarker renders profiled off-main thread FileIO markers properly 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        500μs
      </div>
      <div
        class="tooltipTitle"
      >
        FileIO (non-main thread)
      </div>
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Operation
      :
    </div>
    create/open
    <div
      class="tooltipLabel"
    >
      Source
      :
    </div>
    PoisonIOInterposer
    <div
      class="tooltipLabel"
    >
      Filename
      :
    </div>
    /foo/bar
    <div
      class="tooltipLabel"
    >
      Recording Thread
      :
    </div>
    Empty
    <div
      class="tooltipLabel"
    >
      Occurring Thread
      :
    </div>
    Renderer (TID: 123456)
    <div
      class="tooltipDetailSeparator"
    />
    <div
      class="tooltipLabel"
    >
      Stack
      :
    </div>
    <div
      class="tooltipDetailsBackTrace"
    >
      <h2
        class="tooltipBackTraceTitle"
      >
        Triggered 97.500ms ago, at:
      </h2>
      <ul
        class="backtrace"
      >
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          nsRefreshDriver::AddStyleFlushObserver
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::GeckoRestyleManager::PostRestyleEvent
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          XREMain::XRE_main
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          XRE_main
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          _main
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`TooltipMarker renders properly network markers that were aborted 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        1.4s
      </div>
      <div
        class="tooltipTitle"
      >
        Load 1235: https://img.buzzfeed.com/buzzfeed-static/static/2018-04/29/11/tmp/buzzfeed-prod-web-02/tmp-name-2-18011-1525016782-0_dblwide.jpg?output-format=auto&output-quality=auto&resize=625:*
      </div>
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Status
      :
    </div>
    Request was canceled
    <div
      class="tooltipLabel"
    >
      Cache
      :
    </div>
    Unresolved
    <div
      class="tooltipLabel"
    >
      URL
      :
    </div>
    <span
      class="tooltipDetailsUrl"
    >
      https://img.buzzfeed.com/buzzfeed-static/static/2018-04/29/11/tmp/buzzfeed-prod-web-02/tmp-name-2-18011-1525016782-0_dblwide.jpg?output-format=auto&output-quality=auto&resize=625:*
    </span>
    <div
      class="tooltipLabel"
    >
      Priority
      :
    </div>
    Normal(0)
    <div
      class="tooltipLabel"
    >
      Guessed MIME type
      :
    </div>
    <div
      class="tooltipNetworkMimeType"
    >
      <span
        class="tooltipNetworkMimeTypeSwatch colored-square network-color-img"
        title="image/jpeg"
      />
      image/jpeg
    </div>
    <div
      class="tooltipLabel"
    >
      Track
      :
    </div>
    Empty
  </div>
  <div
    class="tooltipNetworkPhases network-color-img"
  >
    <div
      class="tooltipLabel"
    >
      HTTP response
      :
    </div>
    <div
      aria-label="Starting at 0 milliseconds, duration is 1,433 milliseconds"
    >
      1,433ms
    </div>
    <div
      aria-hidden="true"
      class="tooltipNetworkPhase"
      style="margin-left: 0%; margin-right: 0%; opacity: 1;"
    />
  </div>
</div>
`;

exports[`TooltipMarker renders properly network markers where content type is blank 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        1.4s
      </div>
      <div
        class="tooltipTitle"
      >
        Load 1235: https://img.buzzfeed.com/buzzfeed-static/static/2018-04/29/11/tmp/buzzfeed-prod-web-02/tmp-name-2-18011-1525016782-0_dblwide.jpg?output-format=auto&output-quality=auto&resize=625:*
      </div>
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Status
      :
    </div>
    Response received
    <div
      class="tooltipLabel"
    >
      Cache
      :
    </div>
    Hit
    <div
      class="tooltipLabel"
    >
      URL
      :
    </div>
    <span
      class="tooltipDetailsUrl"
    >
      https://img.buzzfeed.com/buzzfeed-static/static/2018-04/29/11/tmp/buzzfeed-prod-web-02/tmp-name-2-18011-1525016782-0_dblwide.jpg?output-format=auto&output-quality=auto&resize=625:*
    </span>
    <div
      class="tooltipLabel"
    >
      Priority
      :
    </div>
    Low(8)
    <div
      class="tooltipLabel"
    >
      Requested bytes
      :
    </div>
    45.9KB
    <div
      class="tooltipLabel"
    >
      Track
      :
    </div>
    Empty
  </div>
  <div
    class="tooltipNetworkPhases network-color-img"
  >
    <h3
      class="tooltipNetworkTitle3"
    >
      Preconnect (starting at 
      -9,000ms
      )
    </h3>
    <div
      class="tooltipLabel"
    >
      DNS request
      :
    </div>
    <div
      aria-label="Starting at 0 milliseconds, duration is 100 milliseconds"
    >
      100ms
    </div>
    <div
      aria-hidden="true"
      class="tooltipNetworkPhase"
      style="margin-left: 0%; margin-right: 0%; opacity: 0.5;"
    />
    <h3
      class="tooltipNetworkTitle3"
    >
      Actual request
    </h3>
    <div
      class="tooltipLabel"
    >
      Waiting for socket thread
      :
    </div>
    <div
      aria-label="Starting at 0 milliseconds, duration is 300 milliseconds"
    >
      300ms
    </div>
    <div
      aria-hidden="true"
      class="tooltipNetworkPhase tooltipNetworkPhaseEmpty"
      style="margin-left: 0%; margin-right: 79.0648988136776%;"
    />
    <div
      class="tooltipLabel"
    >
      HTTP request and waiting for response
      :
    </div>
    <div
      aria-label="Starting at 300 milliseconds, duration is 100 milliseconds"
    >
      100ms
    </div>
    <div
      aria-hidden="true"
      class="tooltipNetworkPhase"
      style="margin-left: 20.9351011863224%; margin-right: 72.08653175157013%; opacity: 0.75;"
    />
    <div
      class="tooltipLabel"
    >
      HTTP response
      :
    </div>
    <div
      aria-label="Starting at 400 milliseconds, duration is 800 milliseconds"
    >
      800ms
    </div>
    <div
      aria-hidden="true"
      class="tooltipNetworkPhase"
      style="margin-left: 27.91346824842987%; margin-right: 16.259595254710398%; opacity: 1;"
    />
    <div
      class="tooltipLabel"
    >
      Waiting to transmit the response
      :
    </div>
    <div
      aria-label="Starting at 1,200 milliseconds, duration is 233 milliseconds"
    >
      233ms
    </div>
    <div
      aria-hidden="true"
      class="tooltipNetworkPhase tooltipNetworkPhaseEmpty"
      style="margin-left: 83.7404047452896%; margin-right: 7.105427357601002e-15%;"
    />
  </div>
</div>
`;

exports[`TooltipMarker renders properly network markers where content type is missing 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        1.4s
      </div>
      <div
        class="tooltipTitle"
      >
        Load 1235: https://img.buzzfeed.com/buzzfeed-static/static/2018-04/29/11/tmp/buzzfeed-prod-web-02/tmp-name-2-18011-1525016782-0_dblwide.jpg?output-format=auto&output-quality=auto&resize=625:*
      </div>
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Status
      :
    </div>
    Response received
    <div
      class="tooltipLabel"
    >
      Cache
      :
    </div>
    Hit
    <div
      class="tooltipLabel"
    >
      URL
      :
    </div>
    <span
      class="tooltipDetailsUrl"
    >
      https://img.buzzfeed.com/buzzfeed-static/static/2018-04/29/11/tmp/buzzfeed-prod-web-02/tmp-name-2-18011-1525016782-0_dblwide.jpg?output-format=auto&output-quality=auto&resize=625:*
    </span>
    <div
      class="tooltipLabel"
    >
      Priority
      :
    </div>
    Low(8)
    <div
      class="tooltipLabel"
    >
      Guessed MIME type
      :
    </div>
    <div
      class="tooltipNetworkMimeType"
    >
      <span
        class="tooltipNetworkMimeTypeSwatch colored-square network-color-img"
        title="image/jpeg"
      />
      image/jpeg
    </div>
    <div
      class="tooltipLabel"
    >
      Requested bytes
      :
    </div>
    45.9KB
    <div
      class="tooltipLabel"
    >
      Track
      :
    </div>
    Empty
  </div>
  <div
    class="tooltipNetworkPhases network-color-img"
  >
    <h3
      class="tooltipNetworkTitle3"
    >
      Preconnect (starting at 
      -9,000ms
      )
    </h3>
    <div
      class="tooltipLabel"
    >
      DNS request
      :
    </div>
    <div
      aria-label="Starting at 0 milliseconds, duration is 100 milliseconds"
    >
      100ms
    </div>
    <div
      aria-hidden="true"
      class="tooltipNetworkPhase"
      style="margin-left: 0%; margin-right: 0%; opacity: 0.5;"
    />
    <h3
      class="tooltipNetworkTitle3"
    >
      Actual request
    </h3>
    <div
      class="tooltipLabel"
    >
      Waiting for socket thread
      :
    </div>
    <div
      aria-label="Starting at 0 milliseconds, duration is 300 milliseconds"
    >
      300ms
    </div>
    <div
      aria-hidden="true"
      class="tooltipNetworkPhase tooltipNetworkPhaseEmpty"
      style="margin-left: 0%; margin-right: 79.0648988136776%;"
    />
    <div
      class="tooltipLabel"
    >
      HTTP request and waiting for response
      :
    </div>
    <div
      aria-label="Starting at 300 milliseconds, duration is 100 milliseconds"
    >
      100ms
    </div>
    <div
      aria-hidden="true"
      class="tooltipNetworkPhase"
      style="margin-left: 20.9351011863224%; margin-right: 72.08653175157013%; opacity: 0.75;"
    />
    <div
      class="tooltipLabel"
    >
      HTTP response
      :
    </div>
    <div
      aria-label="Starting at 400 milliseconds, duration is 800 milliseconds"
    >
      800ms
    </div>
    <div
      aria-hidden="true"
      class="tooltipNetworkPhase"
      style="margin-left: 27.91346824842987%; margin-right: 16.259595254710398%; opacity: 1;"
    />
    <div
      class="tooltipLabel"
    >
      Waiting to transmit the response
      :
    </div>
    <div
      aria-label="Starting at 1,200 milliseconds, duration is 233 milliseconds"
    >
      233ms
    </div>
    <div
      aria-hidden="true"
      class="tooltipNetworkPhase tooltipNetworkPhaseEmpty"
      style="margin-left: 83.7404047452896%; margin-right: 7.105427357601002e-15%;"
    />
  </div>
</div>
`;

exports[`TooltipMarker renders properly network markers with a preconnect part 1`] = `
<h3
  class="tooltipNetworkTitle3"
>
  Preconnect (starting at 
  -9,000ms
  )
</h3>
`;

exports[`TooltipMarker renders properly network markers with a preconnect part 2`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        1.4s
      </div>
      <div
        class="tooltipTitle"
      >
        Load 1235: https://img.buzzfeed.com/buzzfeed-static/static/2018-04/29/11/tmp/buzzfeed-prod-web-02/tmp-name-2-18011-1525016782-0_dblwide.jpg?output-format=auto&output-quality=auto&resize=625:*
      </div>
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Status
      :
    </div>
    Response received
    <div
      class="tooltipLabel"
    >
      Cache
      :
    </div>
    Hit
    <div
      class="tooltipLabel"
    >
      URL
      :
    </div>
    <span
      class="tooltipDetailsUrl"
    >
      https://img.buzzfeed.com/buzzfeed-static/static/2018-04/29/11/tmp/buzzfeed-prod-web-02/tmp-name-2-18011-1525016782-0_dblwide.jpg?output-format=auto&output-quality=auto&resize=625:*
    </span>
    <div
      class="tooltipLabel"
    >
      Priority
      :
    </div>
    Low(8)
    <div
      class="tooltipLabel"
    >
      MIME type
      :
    </div>
    <div
      class="tooltipNetworkMimeType"
    >
      <span
        class="tooltipNetworkMimeTypeSwatch colored-square network-color-img"
        title="image/jpeg"
      />
      image/jpeg
    </div>
    <div
      class="tooltipLabel"
    >
      Requested bytes
      :
    </div>
    45.9KB
    <div
      class="tooltipLabel"
    >
      Track
      :
    </div>
    Empty
  </div>
  <div
    class="tooltipNetworkPhases network-color-img"
  >
    <h3
      class="tooltipNetworkTitle3"
    >
      Preconnect (starting at 
      -9,000ms
      )
    </h3>
    <div
      class="tooltipLabel"
    >
      DNS request
      :
    </div>
    <div
      aria-label="Starting at 0 milliseconds, duration is 100 milliseconds"
    >
      100ms
    </div>
    <div
      aria-hidden="true"
      class="tooltipNetworkPhase"
      style="margin-left: 0%; margin-right: 54.54545454545455%; opacity: 0.5;"
    />
    <div
      class="tooltipLabel"
    >
      After DNS request
      :
    </div>
    <div
      aria-label="Starting at 100 milliseconds, duration is 100 milliseconds"
    >
      100ms
    </div>
    <div
      aria-hidden="true"
      class="tooltipNetworkPhase"
      style="margin-left: 45.45454545454545%; margin-right: 9.090909090909093%; opacity: 0.5;"
    />
    <div
      class="tooltipLabel"
    >
      TCP connection
      :
    </div>
    <div
      aria-label="Starting at 200 milliseconds, duration is 10 milliseconds"
    >
      10ms
    </div>
    <div
      aria-hidden="true"
      class="tooltipNetworkPhase"
      style="margin-left: 90.9090909090909%; margin-right: 4.545454545454548%; opacity: 0.5;"
    />
    <div
      class="tooltipLabel"
    >
      After TCP connection
      :
    </div>
    <div
      aria-label="Starting at 210 milliseconds, duration is 1.0 milliseconds"
    >
      1.0ms
    </div>
    <div
      aria-hidden="true"
      class="tooltipNetworkPhase"
      style="margin-left: 95.45454545454545%; margin-right: 4.090909090909093%; opacity: 0.5;"
    />
    <div
      class="tooltipLabel"
    >
      Establishing TLS session
      :
    </div>
    <div
      aria-label="Starting at 211 milliseconds, duration is 9.0 milliseconds"
    >
      9.0ms
    </div>
    <div
      aria-hidden="true"
      class="tooltipNetworkPhase"
      style="margin-left: 95.9090909090909%; margin-right: 2.6645352591003757e-15%; opacity: 0.5;"
    />
    <h3
      class="tooltipNetworkTitle3"
    >
      Actual request
    </h3>
    <div
      class="tooltipLabel"
    >
      Waiting for socket thread
      :
    </div>
    <div
      aria-label="Starting at 0 milliseconds, duration is 300 milliseconds"
    >
      300ms
    </div>
    <div
      aria-hidden="true"
      class="tooltipNetworkPhase tooltipNetworkPhaseEmpty"
      style="margin-left: 0%; margin-right: 79.0648988136776%;"
    />
    <div
      class="tooltipLabel"
    >
      HTTP request and waiting for response
      :
    </div>
    <div
      aria-label="Starting at 300 milliseconds, duration is 100 milliseconds"
    >
      100ms
    </div>
    <div
      aria-hidden="true"
      class="tooltipNetworkPhase"
      style="margin-left: 20.9351011863224%; margin-right: 72.08653175157013%; opacity: 0.75;"
    />
    <div
      class="tooltipLabel"
    >
      HTTP response
      :
    </div>
    <div
      aria-label="Starting at 400 milliseconds, duration is 800 milliseconds"
    >
      800ms
    </div>
    <div
      aria-hidden="true"
      class="tooltipNetworkPhase"
      style="margin-left: 27.91346824842987%; margin-right: 16.259595254710398%; opacity: 1;"
    />
    <div
      class="tooltipLabel"
    >
      Waiting to transmit the response
      :
    </div>
    <div
      aria-label="Starting at 1,200 milliseconds, duration is 233 milliseconds"
    >
      233ms
    </div>
    <div
      aria-hidden="true"
      class="tooltipNetworkPhase tooltipNetworkPhaseEmpty"
      style="margin-left: 83.7404047452896%; margin-right: 7.105427357601002e-15%;"
    />
  </div>
</div>
`;

exports[`TooltipMarker renders properly network markers with a preconnect part containing only the domain lookup 1`] = `
<h3
  class="tooltipNetworkTitle3"
>
  Preconnect (starting at 
  -9,000ms
  )
</h3>
`;

exports[`TooltipMarker renders properly network markers with a preconnect part containing only the domain lookup 2`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        1.4s
      </div>
      <div
        class="tooltipTitle"
      >
        Load 1235: https://img.buzzfeed.com/buzzfeed-static/static/2018-04/29/11/tmp/buzzfeed-prod-web-02/tmp-name-2-18011-1525016782-0_dblwide.jpg?output-format=auto&output-quality=auto&resize=625:*
      </div>
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Status
      :
    </div>
    Response received
    <div
      class="tooltipLabel"
    >
      Cache
      :
    </div>
    Hit
    <div
      class="tooltipLabel"
    >
      URL
      :
    </div>
    <span
      class="tooltipDetailsUrl"
    >
      https://img.buzzfeed.com/buzzfeed-static/static/2018-04/29/11/tmp/buzzfeed-prod-web-02/tmp-name-2-18011-1525016782-0_dblwide.jpg?output-format=auto&output-quality=auto&resize=625:*
    </span>
    <div
      class="tooltipLabel"
    >
      Priority
      :
    </div>
    Low(8)
    <div
      class="tooltipLabel"
    >
      MIME type
      :
    </div>
    <div
      class="tooltipNetworkMimeType"
    >
      <span
        class="tooltipNetworkMimeTypeSwatch colored-square network-color-img"
        title="image/jpeg"
      />
      image/jpeg
    </div>
    <div
      class="tooltipLabel"
    >
      Requested bytes
      :
    </div>
    45.9KB
    <div
      class="tooltipLabel"
    >
      Track
      :
    </div>
    Empty
  </div>
  <div
    class="tooltipNetworkPhases network-color-img"
  >
    <h3
      class="tooltipNetworkTitle3"
    >
      Preconnect (starting at 
      -9,000ms
      )
    </h3>
    <div
      class="tooltipLabel"
    >
      DNS request
      :
    </div>
    <div
      aria-label="Starting at 0 milliseconds, duration is 100 milliseconds"
    >
      100ms
    </div>
    <div
      aria-hidden="true"
      class="tooltipNetworkPhase"
      style="margin-left: 0%; margin-right: 0%; opacity: 0.5;"
    />
    <h3
      class="tooltipNetworkTitle3"
    >
      Actual request
    </h3>
    <div
      class="tooltipLabel"
    >
      Waiting for socket thread
      :
    </div>
    <div
      aria-label="Starting at 0 milliseconds, duration is 300 milliseconds"
    >
      300ms
    </div>
    <div
      aria-hidden="true"
      class="tooltipNetworkPhase tooltipNetworkPhaseEmpty"
      style="margin-left: 0%; margin-right: 79.0648988136776%;"
    />
    <div
      class="tooltipLabel"
    >
      HTTP request and waiting for response
      :
    </div>
    <div
      aria-label="Starting at 300 milliseconds, duration is 100 milliseconds"
    >
      100ms
    </div>
    <div
      aria-hidden="true"
      class="tooltipNetworkPhase"
      style="margin-left: 20.9351011863224%; margin-right: 72.08653175157013%; opacity: 0.75;"
    />
    <div
      class="tooltipLabel"
    >
      HTTP response
      :
    </div>
    <div
      aria-label="Starting at 400 milliseconds, duration is 800 milliseconds"
    >
      800ms
    </div>
    <div
      aria-hidden="true"
      class="tooltipNetworkPhase"
      style="margin-left: 27.91346824842987%; margin-right: 16.259595254710398%; opacity: 1;"
    />
    <div
      class="tooltipLabel"
    >
      Waiting to transmit the response
      :
    </div>
    <div
      aria-label="Starting at 1,200 milliseconds, duration is 233 milliseconds"
    >
      233ms
    </div>
    <div
      aria-hidden="true"
      class="tooltipNetworkPhase tooltipNetworkPhaseEmpty"
      style="margin-left: 83.7404047452896%; margin-right: 7.105427357601002e-15%;"
    />
  </div>
</div>
`;

exports[`TooltipMarker renders properly normal network markers 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        1.4s
      </div>
      <div
        class="tooltipTitle"
      >
        Load 1235: https://img.buzzfeed.com/buzzfeed-static/static/2018-04/29/11/tmp/buzzfeed-prod-web-02/tmp-name-2-18011-1525016782-0_dblwide.jpg?output-format=auto&output-quality=auto&resize=625:*
      </div>
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Status
      :
    </div>
    Response received
    <div
      class="tooltipLabel"
    >
      Cache
      :
    </div>
    Hit
    <div
      class="tooltipLabel"
    >
      URL
      :
    </div>
    <span
      class="tooltipDetailsUrl"
    >
      https://img.buzzfeed.com/buzzfeed-static/static/2018-04/29/11/tmp/buzzfeed-prod-web-02/tmp-name-2-18011-1525016782-0_dblwide.jpg?output-format=auto&output-quality=auto&resize=625:*
    </span>
    <div
      class="tooltipLabel"
    >
      Priority
      :
    </div>
    Low(8)
    <div
      class="tooltipLabel"
    >
      MIME type
      :
    </div>
    <div
      class="tooltipNetworkMimeType"
    >
      <span
        class="tooltipNetworkMimeTypeSwatch colored-square network-color-img"
        title="image/jpeg"
      />
      image/jpeg
    </div>
    <div
      class="tooltipLabel"
    >
      Requested bytes
      :
    </div>
    45.9KB
    <div
      class="tooltipLabel"
    >
      Track
      :
    </div>
    Empty
  </div>
  <div
    class="tooltipNetworkPhases network-color-img"
  >
    <div
      class="tooltipLabel"
    >
      Waiting for socket thread
      :
    </div>
    <div
      aria-label="Starting at 0 milliseconds, duration is 50 milliseconds"
    >
      50ms
    </div>
    <div
      aria-hidden="true"
      class="tooltipNetworkPhase tooltipNetworkPhaseEmpty"
      style="margin-left: 0%; margin-right: 96.51276328637188%;"
    />
    <div
      class="tooltipLabel"
    >
      DNS request
      :
    </div>
    <div
      aria-label="Starting at 50 milliseconds, duration is 10 milliseconds"
    >
      10ms
    </div>
    <div
      aria-hidden="true"
      class="tooltipNetworkPhase"
      style="margin-left: 3.487236713628123%; margin-right: 95.81531594364625%; opacity: 0.5;"
    />
    <div
      class="tooltipLabel"
    >
      After DNS request
      :
    </div>
    <div
      aria-label="Starting at 60 milliseconds, duration is 140 milliseconds"
    >
      140ms
    </div>
    <div
      aria-hidden="true"
      class="tooltipNetworkPhase"
      style="margin-left: 4.184684056353747%; margin-right: 86.05105314548751%; opacity: 0.5;"
    />
    <div
      class="tooltipLabel"
    >
      TCP connection
      :
    </div>
    <div
      aria-label="Starting at 200 milliseconds, duration is 5.0 milliseconds"
    >
      5.0ms
    </div>
    <div
      aria-hidden="true"
      class="tooltipNetworkPhase"
      style="margin-left: 13.948946854512492%; margin-right: 85.7023294741247%; opacity: 0.5;"
    />
    <div
      class="tooltipLabel"
    >
      After TCP connection
      :
    </div>
    <div
      aria-label="Starting at 205 milliseconds, duration is 45 milliseconds"
    >
      45ms
    </div>
    <div
      aria-hidden="true"
      class="tooltipNetworkPhase"
      style="margin-left: 14.297670525875303%; margin-right: 82.56381643185938%; opacity: 0.5;"
    />
    <div
      class="tooltipLabel"
    >
      Establishing TLS session
      :
    </div>
    <div
      aria-label="Starting at 250 milliseconds, duration is 40 milliseconds"
    >
      40ms
    </div>
    <div
      aria-hidden="true"
      class="tooltipNetworkPhase"
      style="margin-left: 17.436183568140613%; margin-right: 79.77402706095688%; opacity: 0.5;"
    />
    <div
      class="tooltipLabel"
    >
      Waiting for HTTP request
      :
    </div>
    <div
      aria-label="Starting at 290 milliseconds, duration is 11 milliseconds"
    >
      11ms
    </div>
    <div
      aria-hidden="true"
      class="tooltipNetworkPhase"
      style="margin-left: 20.225972939043114%; margin-right: 79.02078393081325%; opacity: 0.5;"
    />
    <div
      class="tooltipLabel"
    >
      HTTP request and waiting for response
      :
    </div>
    <div
      aria-label="Starting at 301 milliseconds, duration is 99 milliseconds"
    >
      99ms
    </div>
    <div
      aria-hidden="true"
      class="tooltipNetworkPhase"
      style="margin-left: 20.979216069186737%; margin-right: 72.08815734412046%; opacity: 0.75;"
    />
    <div
      class="tooltipLabel"
    >
      HTTP response
      :
    </div>
    <div
      aria-label="Starting at 400 milliseconds, duration is 800 milliseconds"
    >
      800ms
    </div>
    <div
      aria-hidden="true"
      class="tooltipNetworkPhase"
      style="margin-left: 27.91184265587955%; margin-right: 16.306318872925047%; opacity: 1;"
    />
    <div
      class="tooltipLabel"
    >
      Waiting to transmit the response
      :
    </div>
    <div
      aria-label="Starting at 1,200 milliseconds, duration is 234 milliseconds"
    >
      234ms
    </div>
    <div
      aria-hidden="true"
      class="tooltipNetworkPhase tooltipNetworkPhaseEmpty"
      style="margin-left: 83.69368112707495%; margin-right: -3.552713678800501e-15%;"
    />
  </div>
</div>
`;

exports[`TooltipMarker renders properly redirect network markers for a Internal redirection 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        18.7s
      </div>
      <div
        class="tooltipTitle"
      >
        Load 1234: http://www.wikia.com/
      </div>
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Status
      :
    </div>
    Redirecting request
    <div
      class="tooltipLabel"
    >
      Redirection type
      :
    </div>
    Internal
    <div
      class="tooltipLabel"
    >
      Cache
      :
    </div>
    any string could be here
    <div
      class="tooltipLabel"
    >
      URL
      :
    </div>
    <span
      class="tooltipDetailsUrl"
    >
      http://www.wikia.com/
    </span>
    <div
      class="tooltipLabel"
    >
      Redirect URL
      :
    </div>
    <span
      class="tooltipDetailsUrl"
    >
      http://img.buzzfeed.com/buzzfeed-static/static/2018-04/29/11/tmp/buzzfeed-prod-web-02/tmp-name-2-18011-1525016782-0_dblwide.jpg?output-format=auto&output-quality=auto&resize=625
    </span>
    <div
      class="tooltipLabel"
    >
      Priority
      :
    </div>
    Highest(-20)
    <div
      class="tooltipLabel"
    >
      Requested bytes
      :
    </div>
    0B
    <div
      class="tooltipLabel"
    >
      Track
      :
    </div>
    Empty
  </div>
  <div
    class="tooltipNetworkPhases network-color-other"
  >
    <div
      class="tooltipLabel"
    >
      HTTP response
      :
    </div>
    <div
      aria-label="Starting at 0 milliseconds, duration is 18,726 milliseconds"
    >
      18,726ms
    </div>
    <div
      aria-hidden="true"
      class="tooltipNetworkPhase"
      style="margin-left: 0%; margin-right: 0%; opacity: 1;"
    />
  </div>
</div>
`;

exports[`TooltipMarker renders properly redirect network markers for a Permanent redirection 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        18.7s
      </div>
      <div
        class="tooltipTitle"
      >
        Load 1234: http://www.wikia.com/
      </div>
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Status
      :
    </div>
    Redirecting request
    <div
      class="tooltipLabel"
    >
      Redirection type
      :
    </div>
    Permanent
    <div
      class="tooltipLabel"
    >
      Cache
      :
    </div>
    any string could be here
    <div
      class="tooltipLabel"
    >
      URL
      :
    </div>
    <span
      class="tooltipDetailsUrl"
    >
      http://www.wikia.com/
    </span>
    <div
      class="tooltipLabel"
    >
      Redirect URL
      :
    </div>
    <span
      class="tooltipDetailsUrl"
    >
      http://img.buzzfeed.com/buzzfeed-static/static/2018-04/29/11/tmp/buzzfeed-prod-web-02/tmp-name-2-18011-1525016782-0_dblwide.jpg?output-format=auto&output-quality=auto&resize=625
    </span>
    <div
      class="tooltipLabel"
    >
      Priority
      :
    </div>
    Highest(-20)
    <div
      class="tooltipLabel"
    >
      Requested bytes
      :
    </div>
    0B
    <div
      class="tooltipLabel"
    >
      Track
      :
    </div>
    Empty
  </div>
  <div
    class="tooltipNetworkPhases network-color-other"
  >
    <div
      class="tooltipLabel"
    >
      HTTP response
      :
    </div>
    <div
      aria-label="Starting at 0 milliseconds, duration is 18,726 milliseconds"
    >
      18,726ms
    </div>
    <div
      aria-hidden="true"
      class="tooltipNetworkPhase"
      style="margin-left: 0%; margin-right: 0%; opacity: 1;"
    />
  </div>
</div>
`;

exports[`TooltipMarker renders properly redirect network markers for a Temporary redirection 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        18.7s
      </div>
      <div
        class="tooltipTitle"
      >
        Load 1234: http://www.wikia.com/
      </div>
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Status
      :
    </div>
    Redirecting request
    <div
      class="tooltipLabel"
    >
      Redirection type
      :
    </div>
    Temporary
    <div
      class="tooltipLabel"
    >
      Cache
      :
    </div>
    any string could be here
    <div
      class="tooltipLabel"
    >
      URL
      :
    </div>
    <span
      class="tooltipDetailsUrl"
    >
      http://www.wikia.com/
    </span>
    <div
      class="tooltipLabel"
    >
      Redirect URL
      :
    </div>
    <span
      class="tooltipDetailsUrl"
    >
      http://img.buzzfeed.com/buzzfeed-static/static/2018-04/29/11/tmp/buzzfeed-prod-web-02/tmp-name-2-18011-1525016782-0_dblwide.jpg?output-format=auto&output-quality=auto&resize=625
    </span>
    <div
      class="tooltipLabel"
    >
      Priority
      :
    </div>
    Highest(-20)
    <div
      class="tooltipLabel"
    >
      Requested bytes
      :
    </div>
    0B
    <div
      class="tooltipLabel"
    >
      Track
      :
    </div>
    Empty
  </div>
  <div
    class="tooltipNetworkPhases network-color-other"
  >
    <div
      class="tooltipLabel"
    >
      HTTP response
      :
    </div>
    <div
      aria-label="Starting at 0 milliseconds, duration is 18,726 milliseconds"
    >
      18,726ms
    </div>
    <div
      aria-hidden="true"
      class="tooltipNetworkPhase"
      style="margin-left: 0%; margin-right: 0%; opacity: 1;"
    />
  </div>
</div>
`;

exports[`TooltipMarker renders properly redirect network markers for an internal redirection from a HSTS header 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        18.7s
      </div>
      <div
        class="tooltipTitle"
      >
        Load 1234: http://www.wikia.com/
      </div>
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Status
      :
    </div>
    Redirecting request
    <div
      class="tooltipLabel"
    >
      Redirection type
      :
    </div>
    Permanent (HTTP to HTTPS)
    <div
      class="tooltipLabel"
    >
      Cache
      :
    </div>
    any string could be here
    <div
      class="tooltipLabel"
    >
      URL
      :
    </div>
    <span
      class="tooltipDetailsUrl"
    >
      http://www.wikia.com/
    </span>
    <div
      class="tooltipLabel"
    >
      Redirect URL
      :
    </div>
    <span
      class="tooltipDetailsUrl"
    >
      http://img.buzzfeed.com/buzzfeed-static/static/2018-04/29/11/tmp/buzzfeed-prod-web-02/tmp-name-2-18011-1525016782-0_dblwide.jpg?output-format=auto&output-quality=auto&resize=625
    </span>
    <div
      class="tooltipLabel"
    >
      Priority
      :
    </div>
    Highest(-20)
    <div
      class="tooltipLabel"
    >
      Requested bytes
      :
    </div>
    0B
    <div
      class="tooltipLabel"
    >
      Track
      :
    </div>
    Empty
  </div>
  <div
    class="tooltipNetworkPhases network-color-other"
  >
    <div
      class="tooltipLabel"
    >
      HTTP response
      :
    </div>
    <div
      aria-label="Starting at 0 milliseconds, duration is 18,726 milliseconds"
    >
      18,726ms
    </div>
    <div
      aria-hidden="true"
      class="tooltipNetworkPhase"
      style="margin-left: 0%; margin-right: 0%; opacity: 1;"
    />
  </div>
</div>
`;

exports[`TooltipMarker renders properly redirect network markers without additional redirection information 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        18.7s
      </div>
      <div
        class="tooltipTitle"
      >
        Load 1234: http://www.wikia.com/
      </div>
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Status
      :
    </div>
    Redirecting request
    <div
      class="tooltipLabel"
    >
      Cache
      :
    </div>
    any string could be here
    <div
      class="tooltipLabel"
    >
      URL
      :
    </div>
    <span
      class="tooltipDetailsUrl"
    >
      http://www.wikia.com/
    </span>
    <div
      class="tooltipLabel"
    >
      Redirect URL
      :
    </div>
    <span
      class="tooltipDetailsUrl"
    >
      http://img.buzzfeed.com/buzzfeed-static/static/2018-04/29/11/tmp/buzzfeed-prod-web-02/tmp-name-2-18011-1525016782-0_dblwide.jpg?output-format=auto&output-quality=auto&resize=625
    </span>
    <div
      class="tooltipLabel"
    >
      Priority
      :
    </div>
    Highest(-20)
    <div
      class="tooltipLabel"
    >
      Requested bytes
      :
    </div>
    0B
    <div
      class="tooltipLabel"
    >
      Track
      :
    </div>
    Empty
  </div>
  <div
    class="tooltipNetworkPhases network-color-other"
  >
    <div
      class="tooltipLabel"
    >
      HTTP response
      :
    </div>
    <div
      aria-label="Starting at 0 milliseconds, duration is 18,726 milliseconds"
    >
      18,726ms
    </div>
    <div
      aria-hidden="true"
      class="tooltipNetworkPhase"
      style="margin-left: 0%; margin-right: 0%; opacity: 1;"
    />
  </div>
</div>
`;

exports[`TooltipMarker renders the tooltip of CompositorScreenshotWindowDestroyed 1`] = `
<body>
  <div>
    <div
      class="tooltipMarker propClass"
    >
      <div
        class="tooltipHeader"
      >
        <div
          class="tooltipOneLine"
        >
          <div
            class="tooltipTiming"
          >
            1ms
          </div>
          <div
            class="tooltipTitle"
          >
            CompositorScreenshotWindowDestroyed
          </div>
        </div>
      </div>
      <div
        class="tooltipDetails"
      >
        <div
          class="tooltipLabel"
        >
          Description
          :
        </div>
        This marker shows the moment a window has been destroyed.
        <div
          class="tooltipLabel"
        >
          Window ID
          :
        </div>
        XXX
        <div
          class="tooltipLabel"
        >
          Track
          :
        </div>
        Empty
      </div>
    </div>
  </div>
</body>
`;

exports[`TooltipMarker renders tooltips for various markers: Bailout_ShapeGuard after getelem on line 3666 of resource://foo.js -> resource://bar.js:3662-10 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTitle"
      >
        Bailout_ShapeGuard after getelem on line 3666 of resource://foo.js -&gt; resource://bar.js:3662
      </div>
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Track
      :
    </div>
    Main Thread
  </div>
</div>
`;

exports[`TooltipMarker renders tooltips for various markers: Bailout-10 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTitle"
      >
        Bailout
      </div>
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Details
      :
    </div>
    NonObjectInput at JumpTarget on line 27 of https://profiler.firefox.com/701f018d7923ccd65ba7.bundle.js:27
    <div
      class="tooltipLabel"
    >
      Track
      :
    </div>
    Main Thread
  </div>
</div>
`;

exports[`TooltipMarker renders tooltips for various markers: BailoutKind::ArgumentCheck at Uninitialized on line 388 of self-hosted:388-10 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTitle"
      >
        BailoutKind::ArgumentCheck at Uninitialized on line 388 of self-hosted:388
      </div>
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Track
      :
    </div>
    Main Thread
  </div>
</div>
`;

exports[`TooltipMarker renders tooltips for various markers: DOMEvent-10.5 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        800μs
      </div>
      <div
        class="tooltipTitle"
      >
        commandupdate — DOMEvent
      </div>
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Event Type
      :
    </div>
    commandupdate
    <div
      class="tooltipLabel"
    >
      Track
      :
    </div>
    Main Thread
    <div
      class="tooltipLabel"
    >
      Page
      :
    </div>
    <div
      class="tooltipDetailsUrl"
    >
      <span
        class="tooltipDetailsDim"
      >
        https://
      </span>
      developer.mozilla.org
      <span
        class="tooltipDetailsDim"
      >
        /en-US/
      </span>
    </div>
  </div>
</div>
`;

exports[`TooltipMarker renders tooltips for various markers: DOMEvent-10.6 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        500μs
      </div>
      <div
        class="tooltipTitle"
      >
        load — DOMEvent
      </div>
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Event Type
      :
    </div>
    load
    <div
      class="tooltipLabel"
    >
      Track
      :
    </div>
    Main Thread
    <div
      class="tooltipLabel"
    >
      Page
      :
    </div>
    <div
      class="tooltipDetailsUrl"
    >
      <span
        class="tooltipDetailsDim"
      />
      <span
        class="tooltipDetailsDim"
      >
        about:blank
      </span>
       (id: 2)
    </div>
  </div>
</div>
`;

exports[`TooltipMarker renders tooltips for various markers: DOMEvent-10.7 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        500μs
      </div>
      <div
        class="tooltipTitle"
      >
        load — DOMEvent
      </div>
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Event Type
      :
    </div>
    load
    <div
      class="tooltipLabel"
    >
      Track
      :
    </div>
    Main Thread
    <div
      class="tooltipLabel"
    >
      Page
      :
    </div>
    <div
      class="tooltipDetailsUrl"
    >
      <span
        class="tooltipDetailsDim"
      />
      <span
        class="tooltipDetailsDim"
      >
        about:blank
      </span>
       (id: 3)
    </div>
  </div>
</div>
`;

exports[`TooltipMarker renders tooltips for various markers: DOMEvent-10.8 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        500μs
      </div>
      <div
        class="tooltipTitle"
      >
        load — DOMEvent
      </div>
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Event Type
      :
    </div>
    load
    <div
      class="tooltipLabel"
    >
      Track
      :
    </div>
    Main Thread
    <div
      class="tooltipLabel"
    >
      Page
      :
    </div>
    <div
      class="tooltipDetailsUrl"
    >
      <span
        class="tooltipDetailsDim"
      >
        https://
      </span>
      example.org
      <span
        class="tooltipDetailsDim"
      />
       (private)
    </div>
  </div>
</div>
`;

exports[`TooltipMarker renders tooltips for various markers: FileIO (non-profiled thread)-114.5 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        500μs
      </div>
      <div
        class="tooltipTitle"
      >
        FileIO (non-profiled thread)
      </div>
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Operation
      :
    </div>
    create/open
    <div
      class="tooltipLabel"
    >
      Source
      :
    </div>
    PoisonIOInterposer
    <div
      class="tooltipLabel"
    >
      Filename
      :
    </div>
    /foo/bar
    <div
      class="tooltipLabel"
    >
      Recording Thread
      :
    </div>
    Main Thread
    <div
      class="tooltipLabel"
    >
      Occurring Thread ID
      :
    </div>
    123
    <div
      class="tooltipDetailSeparator"
    />
    <div
      class="tooltipLabel"
    >
      Stack
      :
    </div>
    <div
      class="tooltipDetailsBackTrace"
    >
      <h2
        class="tooltipBackTraceTitle"
      >
        Triggered 97.500ms ago, at:
      </h2>
      <ul
        class="backtrace"
      >
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          nsRefreshDriver::AddStyleFlushObserver
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::GeckoRestyleManager::PostRestyleEvent
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::GeckoRestyleManager::ContentStateChanged
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::PresShell::ContentStateChanged
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          nsDocument::ContentStateChanged
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::dom::Element::RemoveStates
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::EventStateManager::UpdateAncestorState
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::EventStateManager::SetContentState
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::EventStateManager::NotifyMouseOut
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::EventStateManager::GenerateMouseEnterExit
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::EventStateManager::PreHandleEvent
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::PresShell::HandleEventInternal
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::PresShell::HandlePositionedEvent
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::PresShell::HandleEvent
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          nsViewManager::DispatchEvent
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          nsView::HandleEvent
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          nsChildView::DispatchEvent
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          ChildViewMouseTracker::MouseMoved
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          nsAppShell::Run
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          nsAppStartup::Run
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <span
          class="colored-border ellipsis"
        />
        …
      </ul>
    </div>
  </div>
</div>
`;

exports[`TooltipMarker renders tooltips for various markers: FileIO-114 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        1ms
      </div>
      <div
        class="tooltipTitle"
      >
        FileIO
      </div>
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Operation
      :
    </div>
    create/open
    <div
      class="tooltipLabel"
    >
      Source
      :
    </div>
    PoisonIOInterposer
    <div
      class="tooltipLabel"
    >
      Filename
      :
    </div>
    /foo/bar
    <div
      class="tooltipLabel"
    >
      Track
      :
    </div>
    Main Thread
    <div
      class="tooltipDetailSeparator"
    />
    <div
      class="tooltipLabel"
    >
      Stack
      :
    </div>
    <div
      class="tooltipDetailsBackTrace"
    >
      <h2
        class="tooltipBackTraceTitle"
      >
        Triggered 97ms ago, at:
      </h2>
      <ul
        class="backtrace"
      >
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          nsRefreshDriver::AddStyleFlushObserver
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::GeckoRestyleManager::PostRestyleEvent
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::GeckoRestyleManager::ContentStateChanged
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::PresShell::ContentStateChanged
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          nsDocument::ContentStateChanged
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::dom::Element::RemoveStates
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::EventStateManager::UpdateAncestorState
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::EventStateManager::SetContentState
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::EventStateManager::NotifyMouseOut
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::EventStateManager::GenerateMouseEnterExit
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::EventStateManager::PreHandleEvent
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::PresShell::HandleEventInternal
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::PresShell::HandlePositionedEvent
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::PresShell::HandleEvent
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          nsViewManager::DispatchEvent
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          nsView::HandleEvent
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          nsChildView::DispatchEvent
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          ChildViewMouseTracker::MouseMoved
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          nsAppShell::Run
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          nsAppStartup::Run
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <span
          class="colored-border ellipsis"
        />
        …
      </ul>
    </div>
  </div>
</div>
`;

exports[`TooltipMarker renders tooltips for various markers: GCMajor-16.5 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTitle"
      >
        GCMajor
      </div>
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Non-incremental reason
      :
    </div>
    GCBytesTrigger
    <div
      class="tooltipLabel"
    >
      Reason
      :
    </div>
    ALLOC_TRIGGER
    <div
      class="tooltipLabel"
    >
      Total slice times
      :
    </div>
    85.6ms
    <div
      class="tooltipLabel"
    >
      Max Pause
      :
    </div>
    74.0ms
    <div
      class="tooltipLabel"
    >
      GC heap size (pre - post)
      :
    </div>
    46.1MB - 36.3MB
    <div
      class="tooltipLabel"
    >
      Malloc heap size (pre - post)
      :
    </div>
    23.1MB - 12.1MB
    <div
      class="tooltipLabel"
    >
      MMU 20ms
      :
    </div>
    0%
    <div
      class="tooltipLabel"
    >
      MMU 50ms
      :
    </div>
    0%
    <div
      class="tooltipLabel"
    >
      Minor GCs
      :
    </div>
    8
    <div
      class="tooltipLabel"
    >
      Slices
      :
    </div>
    2
    <div
      class="tooltipLabel"
    >
      Zones
      :
    </div>
    1 / 4 (25%)
    <div
      class="tooltipLabel"
    >
      Compartments
      :
    </div>
    19
    <div
      class="tooltipLabel"
    >
      Phase mark (self-time)
      :
    </div>
    29ms
    <div
      class="tooltipLabel"
    >
      Phase minor_gc (self-time)
      :
    </div>
    202ms
    <div
      class="tooltipLabel"
    >
      Phase prepare.purge
      :
    </div>
    6.4ms
    <div
      class="tooltipLabel"
    >
      Phase sweep.sweep_compartments.sweep_types (self-time)
      :
    </div>
    9.4ms
    <div
      class="tooltipLabel"
    >
      Phase sweep.sweep_mark.sweep_mark_gray
      :
    </div>
    12ms
    <div
      class="tooltipLabel"
    >
      Phase wait_background_thread
      :
    </div>
    14ms
    <div
      class="tooltipLabel"
    >
      Track
      :
    </div>
    Main Thread
  </div>
</div>
`;

exports[`TooltipMarker renders tooltips for various markers: GCMinor-15.5 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTitle"
      >
        GCMinor
      </div>
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Reason
      :
    </div>
    FULL_CELL_PTR_BUFFER
    <div
      class="tooltipLabel"
    >
      Bytes tenured
      :
    </div>
    1.30MB / 1.97MB (66%)
    <div
      class="tooltipLabel"
    >
      Cells tenured
      :
    </div>
    15.9K / 26.6K (60%)
    <div
      class="tooltipLabel"
    >
      Bytes used
      :
    </div>
    1.97MB / 16.0MB (12%)
    <div
      class="tooltipLabel"
    >
      Nursery allocations since last minor GC
      :
    </div>
    26.6K / 38.8K (69%)
    <div
      class="tooltipLabel"
    >
      Strings deduplicated when tenuring
      :
    </div>
    1,234 / 11.2K (11%)
    <div
      class="tooltipLabel"
    >
      Tenured allocation rate
      :
    </div>
    181MB/s
    <div
      class="tooltipLabel"
    >
      Phase ClearNursery
      :
    </div>
    1.3ms
    <div
      class="tooltipLabel"
    >
      Phase CollectToFP
      :
    </div>
    3.0ms
    <div
      class="tooltipLabel"
    >
      Phase TraceCells
      :
    </div>
    1.9ms
    <div
      class="tooltipLabel"
    >
      Phase TraceGenericEntries
      :
    </div>
    0.39ms
    <div
      class="tooltipLabel"
    >
      Phase TraceSlots
      :
    </div>
    1.5ms
    <div
      class="tooltipLabel"
    >
      Track
      :
    </div>
    Main Thread
  </div>
</div>
`;

exports[`TooltipMarker renders tooltips for various markers: GCSlice-17.5 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTitle"
      >
        GCSlice
      </div>
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Reason
      :
    </div>
    CC_WAITING
    <div
      class="tooltipLabel"
    >
      Budget
      :
    </div>
    11ms
    <div
      class="tooltipLabel"
    >
      States (pre - post)
      :
    </div>
    Initial – Final
    <div
      class="tooltipLabel"
    >
      Trigger (amt/trig)
      :
    </div>
    266MB / 245MB
    <div
      class="tooltipLabel"
    >
      Page faults
      :
    </div>
    1
    <div
      class="tooltipLabel"
    >
      Phase mark
      :
    </div>
    10ms
    <div
      class="tooltipLabel"
    >
      Track
      :
    </div>
    Main Thread
  </div>
</div>
`;

exports[`TooltipMarker renders tooltips for various markers: IPCOut-120 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        unknown duration
      </div>
      <div
        class="tooltipTitle"
      >
        IPC — sent to 2222
      </div>
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Type
      :
    </div>
    PContent::Msg_PreferenceUpdate
    <div
      class="tooltipLabel"
    >
      Sync
      :
    </div>
    false
    <div
      class="tooltipLabel"
    >
      From
      :
    </div>
    Main Thread (Thread ID: 0)
    <div
      class="tooltipLabel"
    >
      Other Pid
      :
    </div>
    PID: 2222
    <div
      class="tooltipLabel"
    >
      Send Thread Latency
      :
    </div>
    1.0ms
    <div
      class="tooltipLabel"
    >
      IPC Send Duration
      :
    </div>
    unknown
    <div
      class="tooltipLabel"
    >
      IPC Recv Latency
      :
    </div>
    unknown
    <div
      class="tooltipLabel"
    >
      Recv Thread Latency
      :
    </div>
    unknown
    <div
      class="tooltipLabel"
    >
      Track
      :
    </div>
    Main Thread
  </div>
</div>
`;

exports[`TooltipMarker renders tooltips for various markers: Invalidate http://mozilla.com/script.js:1234-10 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTitle"
      >
        Invalidate http://mozilla.com/script.js:1234
      </div>
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Track
      :
    </div>
    Main Thread
  </div>
</div>
`;

exports[`TooltipMarker renders tooltips for various markers: Invalidate-10 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTitle"
      >
        Invalidate
      </div>
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Details
      :
    </div>
    https://profiler.firefox.com/701f018d7923ccd65ba7.bundle.js:198:23518
    <div
      class="tooltipLabel"
    >
      Track
      :
    </div>
    Main Thread
  </div>
</div>
`;

exports[`TooltipMarker renders tooltips for various markers: Log-21.7 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTitle"
      >
        Log
      </div>
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Module
      :
    </div>
    RandomModule
    <div
      class="tooltipLabel"
    >
      Name
      :
    </div>
    Random log message
    <div
      class="tooltipLabel"
    >
      Track
      :
    </div>
    Main Thread
  </div>
</div>
`;

exports[`TooltipMarker renders tooltips for various markers: NotifyDidPaint-14.5 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTitle"
      >
        NotifyDidPaint
      </div>
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Type
      :
    </div>
    Paint
    <div
      class="tooltipLabel"
    >
      Track
      :
    </div>
    Main Thread
  </div>
</div>
`;

exports[`TooltipMarker renders tooltips for various markers: NotifyDidPaint-112.5 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        800μs
      </div>
      <div
        class="tooltipTitle"
      >
        NotifyDidPaint
      </div>
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Type
      :
    </div>
    Paint
    <div
      class="tooltipLabel"
    >
      Track
      :
    </div>
    Main Thread
  </div>
</div>
`;

exports[`TooltipMarker renders tooltips for various markers: PlayAudio-115 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTitle"
      >
        PlayAudio
      </div>
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Sample start time
      :
    </div>
    3,632,654,500μs
    <div
      class="tooltipLabel"
    >
      Sample end time
      :
    </div>
    3,632,674,500μs
    <div
      class="tooltipLabel"
    >
      Track
      :
    </div>
    Main Thread
  </div>
</div>
`;

exports[`TooltipMarker renders tooltips for various markers: PreferenceRead-114.9 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTitle"
      >
        PreferenceRead
      </div>
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Name
      :
    </div>
    layout.css.dpi
    <div
      class="tooltipLabel"
    >
      Kind
      :
    </div>
    User
    <div
      class="tooltipLabel"
    >
      Type
      :
    </div>
    Int
    <div
      class="tooltipLabel"
    >
      Value
      :
    </div>
    -1
    <div
      class="tooltipLabel"
    >
      Track
      :
    </div>
    Main Thread
  </div>
</div>
`;

exports[`TooltipMarker renders tooltips for various markers: RefreshObserver-122 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        4ms
      </div>
      <div
        class="tooltipTitle"
      >
        RefreshObserver
      </div>
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Details
      :
    </div>
    Scrollbar fade animation [Style]
    <div
      class="tooltipLabel"
    >
      Track
      :
    </div>
    Main Thread
    <div
      class="tooltipDetailSeparator"
    />
    <div
      class="tooltipLabel"
    >
      Stack
      :
    </div>
    <div
      class="tooltipDetailsBackTrace"
    >
      <ul
        class="backtrace"
      >
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          nsRefreshDriver::AddStyleFlushObserver
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::GeckoRestyleManager::PostRestyleEvent
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::GeckoRestyleManager::ContentStateChanged
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::PresShell::ContentStateChanged
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          nsDocument::ContentStateChanged
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::dom::Element::RemoveStates
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::EventStateManager::UpdateAncestorState
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::EventStateManager::SetContentState
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::EventStateManager::NotifyMouseOut
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::EventStateManager::GenerateMouseEnterExit
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::EventStateManager::PreHandleEvent
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::PresShell::HandleEventInternal
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::PresShell::HandlePositionedEvent
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::PresShell::HandleEvent
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          nsViewManager::DispatchEvent
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          nsView::HandleEvent
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          nsChildView::DispatchEvent
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          ChildViewMouseTracker::MouseMoved
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          nsAppShell::Run
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          nsAppStartup::Run
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <span
          class="colored-border ellipsis"
        />
        …
      </ul>
    </div>
  </div>
</div>
`;

exports[`TooltipMarker renders tooltips for various markers: Styles-18.5 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        500μs
      </div>
      <div
        class="tooltipTitle"
      >
        Styles
      </div>
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Type
      :
    </div>
    Paint
    <div
      class="tooltipLabel"
    >
      Track
      :
    </div>
    Main Thread
    <div
      class="tooltipDetailSeparator"
    />
    <div
      class="tooltipLabel"
    >
      Stack
      :
    </div>
    <div
      class="tooltipDetailsBackTrace"
    >
      <h2
        class="tooltipBackTraceTitle"
      >
        Triggered 1.500ms ago, at:
      </h2>
      <ul
        class="backtrace"
      >
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          nsRefreshDriver::AddStyleFlushObserver
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::GeckoRestyleManager::PostRestyleEvent
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::GeckoRestyleManager::ContentStateChanged
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::PresShell::ContentStateChanged
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          nsDocument::ContentStateChanged
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::dom::Element::RemoveStates
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::EventStateManager::UpdateAncestorState
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::EventStateManager::SetContentState
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::EventStateManager::NotifyMouseOut
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::EventStateManager::GenerateMouseEnterExit
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::EventStateManager::PreHandleEvent
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::PresShell::HandleEventInternal
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::PresShell::HandlePositionedEvent
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::PresShell::HandleEvent
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          nsViewManager::DispatchEvent
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          nsView::HandleEvent
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          nsChildView::DispatchEvent
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          ChildViewMouseTracker::MouseMoved
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          nsAppShell::Run
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          nsAppStartup::Run
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <span
          class="colored-border ellipsis"
        />
        …
      </ul>
    </div>
  </div>
</div>
`;

exports[`TooltipMarker renders tooltips for various markers: Styles-20 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        500μs
      </div>
      <div
        class="tooltipTitle"
      >
        Styles
      </div>
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Elements traversed
      :
    </div>
    100
    <div
      class="tooltipLabel"
    >
      Elements styled
      :
    </div>
    50
    <div
      class="tooltipLabel"
    >
      Elements matched
      :
    </div>
    10
    <div
      class="tooltipLabel"
    >
      Styles shared
      :
    </div>
    15
    <div
      class="tooltipLabel"
    >
      Styles reused
      :
    </div>
    20
    <div
      class="tooltipLabel"
    >
      Track
      :
    </div>
    Main Thread
    <div
      class="tooltipDetailSeparator"
    />
    <div
      class="tooltipLabel"
    >
      Stack
      :
    </div>
    <div
      class="tooltipDetailsBackTrace"
    >
      <h2
        class="tooltipBackTraceTitle"
      >
        First invalidated 500μs before the flush, at:
      </h2>
      <ul
        class="backtrace"
      >
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          nsRefreshDriver::AddStyleFlushObserver
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::GeckoRestyleManager::PostRestyleEvent
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::GeckoRestyleManager::ContentStateChanged
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::PresShell::ContentStateChanged
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          nsDocument::ContentStateChanged
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::dom::Element::RemoveStates
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::EventStateManager::UpdateAncestorState
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::EventStateManager::SetContentState
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::EventStateManager::NotifyMouseOut
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::EventStateManager::GenerateMouseEnterExit
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::EventStateManager::PreHandleEvent
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::PresShell::HandleEventInternal
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::PresShell::HandlePositionedEvent
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          mozilla::PresShell::HandleEvent
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          nsViewManager::DispatchEvent
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          nsView::HandleEvent
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          nsChildView::DispatchEvent
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          ChildViewMouseTracker::MouseMoved
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          nsAppShell::Run
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <li
          class="backtraceStackFrame backtraceStackFrame_isFrameLabel"
        >
          <span
            class="colored-border category-color-grey"
            title="Other"
          />
          nsAppStartup::Run
          <em
            class="backtraceStackFrameOrigin"
          />
        </li>
        <span
          class="colored-border ellipsis"
        />
        …
      </ul>
    </div>
  </div>
</div>
`;

exports[`TooltipMarker renders tooltips for various markers: TimeToFirstInteractive (TTFI)-21.4 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTitle"
      >
        TimeToFirstInteractive (TTFI)
      </div>
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Details
      :
    </div>
    TTFI after 100.01ms (longTask was 100.001ms)
    <div
      class="tooltipLabel"
    >
      Track
      :
    </div>
    Main Thread
  </div>
</div>
`;

exports[`TooltipMarker renders tooltips for various markers: UserTiming-12.5 1`] = `
<div
  class="tooltipMarker propClass"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        0s
      </div>
      <div
        class="tooltipTitle"
      >
        foobar
      </div>
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Description
      :
    </div>
    <div
      class="tooltipDetailsDescription"
    >
      UserTiming is created using the DOM APIs performance.mark() and performance.measure().
    </div>
    <div
      class="tooltipLabel"
    >
      Name
      :
    </div>
    foobar
    <div
      class="tooltipLabel"
    >
      Entry Type
      :
    </div>
    mark
    <div
      class="tooltipLabel"
    >
      Track
      :
    </div>
    Main Thread
  </div>
</div>
`;

exports[`TooltipMarker shows a tooltip for Jank markers 1`] = `
<div
  class="tooltipMarker"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        70ms
      </div>
      <div
        class="tooltipTitle"
      >
        Jank – event processing delay
      </div>
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Description
      :
    </div>
    <div
      class="tooltipDetailsDescription"
    >
      Jank markers show when the main event loop of a thread has been busy. It is a good indicator that there may be some kind of performance problem that is worth investigating.
    </div>
    <div
      class="tooltipLabel"
    >
      Track
      :
    </div>
    Empty
  </div>
</div>
`;

exports[`TooltipMarker shows image of CompositorScreenshot markers 1`] = `
<div
  class="tooltipMarker"
>
  <div
    class="tooltipHeader"
  >
    <div
      class="tooltipOneLine"
    >
      <div
        class="tooltipTiming"
      >
        2ms
      </div>
      <div
        class="tooltipTitle"
      >
        CompositorScreenshot
      </div>
    </div>
  </div>
  <div
    class="tooltipDetails"
  >
    <div
      class="tooltipLabel"
    >
      Image
      :
    </div>
    <img
      class="tooltipScreenshotImg"
      src="Screenshot Url"
      style="width: 350px; height: 175px;"
    />
    <div
      class="tooltipLabel"
    >
      Window Size
      :
    </div>
    600
    px × 
    300
    px
    <div
      class="tooltipLabel"
    >
      Description
      :
    </div>
    This marker spans the time between each composite of a window and shows the window contents during that time.
    <div
      class="tooltipLabel"
    >
      Window ID
      :
    </div>
    XXX
    <div
      class="tooltipLabel"
    >
      Track
      :
    </div>
    Empty
  </div>
</div>
`;

exports[`TooltipMarker shows the source thread for markers from a merged thread 1`] = `
<body>
  <div>
    <div
      class="tooltipMarker"
    >
      <div
        class="tooltipHeader"
      >
        <div
          class="tooltipOneLine"
        >
          <div
            class="tooltipTiming"
          >
            1ms
          </div>
          <div
            class="tooltipTitle"
          >
            click — DOMEvent
          </div>
        </div>
      </div>
      <div
        class="tooltipDetails"
      >
        <div
          class="tooltipLabel"
        >
          Event Type
          :
        </div>
        click
        <div
          class="tooltipLabel"
        >
          Track
          :
        </div>
        https://mozilla.org
        <div
          class="tooltipLabel"
        >
          Page
          :
        </div>
        <div
          class="tooltipDetailsUrl"
        >
          <span
            class="tooltipDetailsDim"
          >
            https://
          </span>
          developer.mozilla.org
          <span
            class="tooltipDetailsDim"
          >
            /en-US/
          </span>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`TooltipMarker shows the source thread for markers from a merged thread 2`] = `
<body>
  <div>
    <div
      class="tooltipMarker"
    >
      <div
        class="tooltipHeader"
      >
        <div
          class="tooltipOneLine"
        >
          <div
            class="tooltipTiming"
          >
            1ms
          </div>
          <div
            class="tooltipTitle"
          >
            pageload — DOMEvent
          </div>
        </div>
      </div>
      <div
        class="tooltipDetails"
      >
        <div
          class="tooltipLabel"
        >
          Event Type
          :
        </div>
        pageload
        <div
          class="tooltipLabel"
        >
          Track
          :
        </div>
        https://letsencrypt.org
        <div
          class="tooltipLabel"
        >
          Page
          :
        </div>
        <div
          class="tooltipDetailsUrl"
        >
          <span
            class="tooltipDetailsDim"
          >
            https://
          </span>
          letsencrypt.org
          <span
            class="tooltipDetailsDim"
          >
            /
          </span>
        </div>
      </div>
    </div>
  </div>
</body>
`;
